Kubernetes_Manifests/deployment-frontend.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plant-identifier
  namespace: plant-id
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plant-identifier
  template:
    metadata:
      labels:
        app: plant-identifier
    spec:
      containers:
      - name: plant-identifier
        image: gcr.io/handy-math-440909-q1/plant-identifier:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 300m
            memory: 256Mi
---
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plant-identifier
  namespace: plant-id
  annotations:
    cloud.google.com/neg: '{"ingress": true}'  # Important for GKE ingress
    cloud.google.com/app-protocols: '{"http":"HTTPS"}'
    cloud.google.com/backend-config: '{"default": "plant-id-backend-config"}'
  labels:
    app: plant-identifier
spec:
  type: ClusterIP
  ports:
  - name: http # port name also used in ServiceMonitor
    port: 80
    targetPort: 3000
  selector:
    app: plant-identifier
